<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainScroller"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    android:fillViewport="true">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

	<View
        android:layout_width="wrap_content"
        android:layout_height="10dp">
    </View>
    
    <View
	    android:layout_width="wrap_content"
        android:layout_height="1dip"
        android:background="#ffffff" >
    </View>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
		android:gravity="center"
		android:background="#333333"
        android:text="Enter sequence or NCBI accession number"
        android:textAppearance="?android:attr/textAppearanceSmall" />

	<View
	    android:layout_width="wrap_content"
        android:layout_height="1dip"
        android:background="#ffffff" >
    </View>
    
	<View
        android:layout_width="wrap_content"
        android:layout_height="5dp">
    </View>
    
    <EditText
        android:id="@+id/sequence1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sequence1"
        android:inputType="textCapCharacters"
        android:maxLength="500" />

	<View
        android:layout_width="wrap_content"
        android:layout_height="5dp">
    </View>

    <EditText
        android:id="@+id/sequence2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/sequence2"
        android:inputType="textCapCharacters"
        android:maxLength="500" />

	<View
        android:layout_width="wrap_content"
        android:layout_height="10dp">
    </View>
    
	<View
	    android:layout_width="wrap_content"
        android:layout_height="1dip"
        android:background="#ffffff" >
    </View>    

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="#333333"
        android:text="Enter alignment options"
        android:textAppearance="?android:attr/textAppearanceSmall" />

	<View
	    android:layout_width="wrap_content"
        android:layout_height="1dip"
        android:background="#ffffff" >
    </View>
    
	<View
        android:layout_width="wrap_content"
        android:layout_height="5dp">
    </View>
    
	
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Substitution Matrix"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/matrix_type"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:entries="@array/matrix_array"
        android:prompt="@string/substitution_matrix" />
	<View
        android:layout_width="wrap_content"
        android:layout_height="5dp">
    </View>
    
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Gap Open Penalty"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/gap_penalty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/gap_penalty"
        android:inputType="numberDecimal" />
	<View
        android:layout_width="wrap_content"
        android:layout_height="5dp">
    </View>
    
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Gap Extension Penalty"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/gap_extension"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/gap_extension"
        android:inputType="numberDecimal" />
	<View
        android:layout_width="wrap_content"
        android:layout_height="5dp">
    </View>
    
    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Alignment Type"
        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	<Spinner
        android:id="@+id/alignment_type"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:entries="@array/alignment_array"
        android:prompt="@string/alignment_options" />

	<View
        android:layout_width="wrap_content"
        android:layout_height="10dp">
    </View>
    
    <View
	    android:layout_width="wrap_content"
        android:layout_height="1dip"
        android:background="#ffffff" >
    </View>
    
    <Button
        android:id="@+id/button_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="sendMessage"
        android:text="@string/button_send" />

	<View
	    android:layout_width="wrap_content"
        android:layout_height="1dip"
        android:background="#ffffff" >
    </View>
    
	<View
        android:layout_width="wrap_content"
        android:layout_height="10dp">
    </View>
    
	<TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        android:gravity="center"
        android:text="ITD Bioinformatics"
        android:textAppearance="?android:attr/textAppearanceSmall" />
	
    
</LinearLayout>

</ScrollView>
